{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 451,
  "lineage": "3dc48486-29fe-82fb-ebc3-fe6601be3860",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DivvyCloud-InternetGateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0291bdb109a8b903f",
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-InternetGateway"
            },
            "vpc_id": "vpc-07ee995c36701e165"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "DivvCloud-ECS-ALB-Listener-HTTP",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "DivvCloud-ECS-ALB-Listener-HTTPS",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DivvyCloud-ECS-SecurityGroup-RDS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:security-group/sg-09c9b71c5ea040f20",
            "description": "Database Rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c9b71c5ea040f20",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DivvyCloud-ECS-SecurityGroup-RDS",
            "name_prefix": null,
            "owner_id": "014578312761",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07ee995c36701e165"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DivvyCloud-ECS-Private-Subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:subnet/subnet-0569acc5c453009ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-0569acc5c453009ef",
            "map_public_ip_on_launch": false,
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-ECS-Private-Subnet1"
            },
            "vpc_id": "vpc-07ee995c36701e165"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DivvyCloud-ECS-Private-Subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:subnet/subnet-05e4149bd9bca7996",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-05e4149bd9bca7996",
            "map_public_ip_on_launch": false,
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-ECS-Private-Subnet2"
            },
            "vpc_id": "vpc-07ee995c36701e165"
          },
          "dependencies": [
            "aws_vpc.DivvyCloud-ECS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DivvyCloud-ECS-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014578312761:vpc/vpc-07ee995c36701e165",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d161d27947af15fa",
            "default_route_table_id": "rtb-0dbb305e9f923a1c6",
            "default_security_group_id": "sg-0e7b35c5d6d61692f",
            "dhcp_options_id": "dopt-1d413278",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07ee995c36701e165",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dbb305e9f923a1c6",
            "owner_id": "014578312761",
            "tags": {
              "Name": "DivvyCloud-ECS-VPC"
            }
          }
        }
      ]
    }
  ]
}